# fastapi-blog

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  pyproject.toml
fastapi_blog/: .env  __init__.py  app.py  blog.db  models.py
fastapi_blog/config/: config.json  initial_data.json
fastapi_blog/core/: __init__.py  config.py  security.py  utils.py
fastapi_blog/static/js/: htmx.min.js
fastapi_blog/templates/: about.html  base.html  contact.html  home.html  index.html  login.html  post.html  post_preview.html  posts.html  tag.html  tag_posts.html  tags.html
fastapi_blog/templates/reusable/: footer.html  head.html  navbar.html  scripts.html
fastapi_blog/utils/: __init__.py  utils.py
migrations/: env.py
migrations/versions/: e1dabbc65717_create_posts_table.py
